# ChatFit

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  api.py  bot.py  design.md  docker-compose.yml  main.py  models.py  prompts.py  pyproject.toml  rag.py  read_memory.py  tasks.md
.github/workflows/: ci.yml  pages.yml
.superpowers/brainstorm/6237-1783316439/content/: design-direction.html  visual-mockups.html
.superpowers/brainstorm/6237-1783316439/state/: server-info
agent/: memory_store.py  state.py
agent/memory/: db_setup.py
agents/: assistant_selector.py  llm_factory.py  meal_recorder.py  models.py  rag.py  sqlite_handler.py  training_recorder.py  utils.py
agents/roles/: insights.py  meal.py  supervisor.py  training.py
config/: synonyms.json
docs/: architecture.md  index.html  pipeline.md  quality.md
docs/superpowers/plans/: 2026-06-16-chatfit-architecture.md  2026-06-24-pylint-pre-commit.md  2026-06-29-db-migration-plan.md  2026-07-06-neobrutalism-design.md  2026-07-08-async-fix.md  2026-07-11-advanced-evaluation-framework.md  2026-07-11-agent-evaluation-framework.md  2026-07-16-agent-verification-pipeline.md
docs/superpowers/specs/: 2026-06-16-chatfit-architecture-design.md  2026-06-24-pylint-pre-commit-design.md  2026-06-29-db-migration-design.md  2026-06-30-chatfit-mcp-gdrive-export-design.md  2026-07-02-readme-and-landing-page-design.md  2026-07-06-neobrutalism-design.md  2026-07-11-agent-evaluation-framework-design.md  2026-07-16-agent-verification-pipeline-design.md
llm_factory/: llm_factory.py
nodes/: diet_agent.py  meal_agent.py  store_agent.py  supervisor_agent.py  training_agent.py
schema/: diet.py  meal.py  training.py
scripts/: llm_judge.py
storage/: db.py
tests/: test_api.py  test_assistant_selector.py  test_context_governance.py  test_db.py  test_insights_agent.py  test_llm_factory.py  test_meal_agent.py  test_models.py  test_safe_execution.py  test_schema.py  test_sqlite_handler.py  test_state.py  test_supervisor_agent.py  test_training_agent.py  test_training_recorder.py  test_utils.py
tests/eval/: eval_cases.yaml  test_code_grader.py
tests/recipes/: 柠檬水.md
tools/: safe_execution.py
utils/: db.py  llm_factory.py  normalizer.py
