[project]
name = "chatfit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "httpx[socks]>=0.28.1",
    "langchain-anthropic>=1.4.6",
    "langchain-chroma>=1.1.0",
    "langchain-google-genai>=4.2.5",
    "langchain-openai>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.5",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pylint>=4.0.6",
    "pytest>=9.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-m 'not e2e'"
markers = [
    "e2e: marks tests as end-to-end, these tests are slow and are excluded by default"
]

[tool.pylint.messages_control]
disable = [
    "line-too-long",
    "missing-docstring"
]
