[project]
name = "chatfit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "chromadb>=1.5.9",
    "fastapi>=0.138.1",
    "httpx[socks]>=0.28.1",
    "langchain-anthropic>=1.4.6",
    "langchain-chroma>=1.1.0",
    "langchain-google-genai>=4.2.5",
    "langchain-openai>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "langfuse>=4.14.0",
    "langgraph>=1.2.5",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "mistune>=3.3.2",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.8",
    "rich>=15.0.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "black>=26.5.1",
    "mypy>=2.3.0",
    "pre-commit>=4.6.0",
    "pylint>=4.0.6",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pyyaml>=6.0.3",
    "ruff>=0.15.21",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-m 'not e2e'"
markers = [
    "e2e: marks tests as end-to-end, these tests are slow and are excluded by default"
]
filterwarnings = [
    "ignore::DeprecationWarning:google.genai.*",
    "ignore:coroutine 'BaseApiClient.aclose' was never awaited:RuntimeWarning"
]

[tool.pylint.messages_control]
disable = [
    "line-too-long",
    "missing-docstring"
]

[tool.mypy]
explicit_package_bases = true
